--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         </div>
     </section>
     <section class="shadow-photo">
-        <h2>Songs Items</h2>
-        <div class="width shadow">
+        <h2>Songs Items</h2><br>
+        <div id="border-1" class="width shadow">
             <h2>Bangla Song</h2>
             <h3 class="highlight-name">2020-2021| National song</h3>
             <p>আমার সোনার বাংলা
@@ -52,7 +52,7 @@
                 সোনার বাংলা
                 আমি তোমায় ভালবাসি</p>
         </div>
-        <div class="width shadow">
+        <div id="border-2" class="width shadow">
             <h2>English Song</h2>
             <h3 class="highlight-name">2021-2021| National song</h3>
             <p>God save our gracious Queen,
@@ -68,5 +68,7 @@
                 And make them fall!</p>
         </div>
     </section>
+    <footer> @Mahbubur Rahman 2022,all rights reserved.</footer>
+
 </body>
 </html>
