--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="photos/png-file-2.png" type="image/x-icon">
 </head>
 <body>
     <section class="top-bannar">
